- Removing all the reactive cocoa crap that wasn't a direct map from objective-C to Swift and replacing with standard eventing - Parsing JSON returned from weather API and populating weather objects - Making tweaks to dictionary instantiation to get around an Xcode compilation bug - Implementing the WXManager, which is a delegate for the iOS location manager and responds to its events to trigger the weather updates. - Adding necessary values to info.plist for the CLLocationManager to send events... otherwise it silently fails :(

--- a/SimpleWeather/Info.plist
+++ b/SimpleWeather/Info.plist
@@ -36,6 +36,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Fetch location for weather</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Fetch location for weather</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
